--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ logging.level.org.springframework.mail=DEBUG
 cloudinary.name=${CLOUDINARY_NAME}
 cloudinary.key=${CLOUDINARY_KEY}
 cloudinary.secret=${CLOUDINARY_SECRET}
+#Limite massimo del file
+spring.servlet.multipart.max-file-size=${MAX_UPLOAD_SIZE}
+spring.servlet.multipart.max-request-size=${MAX_UPLOAD_SIZE}
