--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ cloudinary.secret=${CLOUDINARY_SECRET}
 #Limite massimo del file
 spring.servlet.multipart.max-file-size=${MAX_UPLOAD_SIZE}
 spring.servlet.multipart.max-request-size=${MAX_UPLOAD_SIZE}
+app.attachments.dir=./uploads
+
